- implemented users & contacts api
